<resources>
    <string name="app_name">A-YEN App</string>

    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cerrar">Cerrar</string>

    <!-- Bottom Navigation -->
    <string name="bottom_nav_tpv">TPV</string>
    <string name="bottom_nav_productos">Productos</string>
    <string name="bottom_nav_lista_compra">Lista compra</string>
    <string name="bottom_nav_lista_registros">Registros</string>

    <!-- Productos -->
    <string name="hintBuscar">Buscar...</string>
    <string name="btnEscanerCodigo">Escanee el código de barras</string>
    <string name="btnModificar">Modificar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnHacerFoto">Hacer foto</string>
    <string name="btnSubirFoto">Subir foto</string>
    <string name="switchAddCompra">Añadir a compras</string>
    <string name="btnGuardar">GUARDAR</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btnCrearProducto">Crear producto</string>
    <string name="txtCodigo">Código:</string>
    <string name="hintCodigo">Introduce el código</string>
    <string name="txtNombre">Nombre:</string>
    <string name="hintNombre">Indroduce el nombre</string>
    <string name="txtPrecio">Precio:</string>
    <string name="hintPrecio">9.99</string>
    <string name="txtCoste">Coste:</string>
    <string name="hintCoste">9.99</string>
    <string name="txtStock">Stock:</string>
    <string name="hintStock">123</string>
    <string name="txtUmbral">Umbral de compra:</string>
    <string name="hintUmbral">20</string>
    <string name="precioInvalido">El precio no es válido</string>
    <string name="costeInvalido">El precio no es válido</string>
    <string name="stockInvalido">El precio no es válido</string>
    <string name="umbralInvalido">El precio no es válido</string>
    <string name="sinFoto">No se ha establecido una foto</string>
    <string name="camposVacios">Todos los campos son obligatorios</string>
    <string name="falloGuardarProducto">No se ha podido guardar el producto</string>
    <string name="exitoGuardarProducto">Producto guardado correctamente</string>
    <string name="falloCargarImagen">Fallo al cargar la imagen del producto</string>
    <string name="falloCargarProductos">Fallo al cargar los productos</string>
    <string name="dialogBorrarProductoTitulo">Eliminar producto</string>
    <string name="dialogBorrarProductoMensaje">¿Estás seguro que quieres borrar este producto?</string>
    <string name="falloEliminarProducto">No se ha podido eliminar el producto</string>
    <string name="exitoEliminarProducto">Se ha eliminado el producto correctamente</string>
    <string name="mensajeCodigoNoEditable">El código no se puede modificar</string>
    <string name="keyProductoAntiguo">productoAntiguo</string>
    <string name="activityGuardarProductoTitle">Guardar producto</string>
    <string name="mensajeNoHayProductos">No hay productos</string>

    <!-- TPV -->
    <string name="txtCantidadLineaVenta">Cantidad:</string>
    <string name="btnFinalizarVenta">FINALIZAR</string>
    <string name="btnCancelarVenta">CANCELAR</string>
    <string name="btnEscanearVenta">Escanear</string>
    <string name="btnBuscarVenta">Buscar</string>
    <string name="mensajeProductoNoExiste">El producto no existe</string>
    <string name="dialogCancelarVentaTitulo">Cancelar venta</string>
    <string name="dialogCancelarVentaMensaje">¿Estás seguro que quiere cancelar la venta?</string>
    <string name="activityBuscarTitle">Buscar producto</string>
    <string name="txtTotal">TOTAL:</string>
    <string name="btnAdd">Añadir</string>
    <string name="exitoGuardarVenta">Se ha guardado la venta con éxito</string>
    <string name="falloGuardarVenta">No se ha podido guardar la venta</string>
    <string name="dialogFinalizarVentaTitle">Finalizar venta</string>
    <string name="dialogFinalizarVentaMensaje">¿Estás seguro que quieres finalizar la venta?</string>
    <string name="mensajeVentaVacia">No se ha añadido ningún producto a la venta</string>
    <string name="mensajeListaVentaVacia">Añade productos a la venta</string>

    <!-- Compra -->
    <string name="btnFinalizarCompra">FINALIZAR</string>
    <string name="btnReiniciarCompra">REINICIAR</string>
    <string name="dialogReiniciarCompraTitulo">Reiniciar compra</string>
    <string name="dialogReiniciarCompraMensaje">¿Estás seguro que quiere reiniciar la compra?</string>
    <string name="dialogFinalizarCompraTitle">Finalizar compra</string>
    <string name="dialogFinalizarCompraMensaje">¿Estás seguro que quieres finalizar la compra?</string>
    <string name="mensajeCompraVacia">No se ha añadido ningún producto a la compra</string>
    <string name="exitoGuardarCompra">Se ha guardado la compra con éxito</string>
    <string name="falloGuardarCompra">No se ha podido guardar la compra</string>
    <string name="txtCantidadLineaCompra">Cantidad</string>
    <string name="txtCosteLineaCompra">Coste</string>
    <string name="mensajeListaCompraVacia">Lista de la compra vacía</string>

    <!-- Registros -->
    <string name="tabVentas">Ventas</string>
    <string name="tabCompras">Compras</string>
    <string name="txtFechaInicio">Inicio</string>
    <string name="txtFechaFin">Fin</string>
    <string name="falloObtenerVentas">No ha sido posible obtener las ventas</string>
    <string name="mensajeNoHayVentas">No hay ventas</string>
    <string name="mensajeNoHayCompras">No hay compras</string>
    <string name="falloObtenerCompras">No ha sido posible obtener las compras</string>
    <string name="txtCodigoRegistro">Código:</string>
    <string name="txtFechaRegistro">Fecha:</string>
    <string name="activityRegistroTitle">Detalles</string>

</resources>